--- a/phone.css
+++ b/phone.css
@@ -161,6 +161,7 @@
     }
 
     .sign_in_button {
+        padding: 10px 8px;
         width: 50%;
         border: 2px solid #ED1C91;
         border-radius: 5px;
@@ -170,18 +171,19 @@
         /* the centre align the text in the button */
         cursor: pointer;
         /* to make pointer arrow appear when hovering over the button */
+        text-decoration: none;
     }
 
     .sign_in_button p {
         font-size: 14px;
         font-family: 'Oswald', sans-serif;
         font-weight: 400;
-        padding: 10px 16px;
         margin: 0;
         cursor: pointer;
     }
     
     .register_button {
+        padding: 10px 8px;
         width: 50%;
         border: 1.5px solid #ED1C91;
         background-color: #ED1C91;
@@ -193,6 +195,7 @@
         align-content: center;
         cursor: pointer;
         /* to make pointer arrow appear when hovering over the button */
+        text-decoration: none;
     }
 
     .register_button__container {
@@ -201,8 +204,11 @@
     }
 
     i.user_icon {
+        margin-right: 12px;
+        display: flex;
+        align-items: center;
         color: #FFFFFF;
-        font-size: 26px;
+        font-size: 16px;
         /* to display text and override font-size:0 in main */
     }
 
@@ -210,7 +216,6 @@
         font-size: 14px;
         font-family: 'Oswald', sans-serif;
         font-weight: 400;
-        padding: 10px 16px;
         margin: 0;
         cursor: pointer;
         color: #FFFFFF;
